--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<title>Fitness</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico"/>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
 	
 	<script src="js/script.js"></script>
 </body>
